--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <a href="#">Baladzhary FK</a>
                     </div>
                     <ul>
-                        <li><a href="aliabbas.html">Ana Səhifə</a></li>
+                        <li><a href="index.html">Ana Səhifə</a></li>
                         <li><a href="haqqimizda.html">Haqqımızda</a></li>
                         <li><a href="elaqe.html">Əlaqə</a></li>                    
                     </ul>
