--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2>XOŞGƏLDİNİZ!</h2>
                 <div class="buttons">
                     <a href="butunmatclar.html">
-                    <button>Bütün Matçlar</button>
+                    <button>17-si Matç Var!</button>
                 </a>
                 <a href="https://www.instagram.com/bileceri_fk1/">
                     <button>Instagram</button>
